--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -113,6 +113,7 @@
 #tnthLogo {
   float: right;
   margin-right: 2.5em;
+  transition: margin-right 10ms ease-in;
 }
 #tnthLogo img {
   height: 75px;
@@ -121,7 +122,7 @@
   padding: 0;
 }
 #tnthLogoXs img {
-  height: 50px;
+  height: 40px;
   float: right;
 }
 #tnthTopLinks {
@@ -295,12 +296,20 @@
   color: #333;
 }
 /** Responsive sizes **/
+@media (max-width: 498px) {
+  #tnthLogoXs img {
+    margin-right: 2em !important;
+  }
+}
 @media (max-width: 767px) {
   #tnthNavMain {
     display: none !important;
   }
   #tnthNavXs {
     display: block;
+  }
+  #tnthLogoXs img {
+    margin-right: 40%;
   }
 }
 @media (max-width: 991px) {
@@ -312,9 +321,12 @@
     margin-right: 1em;
   }
 }
-@media (min-width: 1199px) {
+@media (min-width: 1219px) {
   #tnthTopLinks {
     margin-left: 0em;
+  }
+  #tnthLogo {
+    margin-right: 2em;
   }
 }
 @media (min-width: 992px) {
@@ -322,11 +334,20 @@
     max-width: 940px;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1220px) {
   #tnthNavMainContainer {
     max-width: none;
   }
   #tnthTopLinks {
     margin-right: 0;
+  }
+
+  #tnthLogo {
+    margin-right: 40%;
+  }
+}
+@media (min-width: 1380px) {
+  #tnthLogo {
+    margin-right: 45%;
   }
 }
