--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -1,86 +1,69 @@
-{% extends "gil/base.html" %}
+{% extends "layout.html" %}
 {% block main %}
-{{ super() }}
-<main id="portalMain" class="main home--container">
 
-    <section class="page-intro page-intro--dark home--header">
-        <h3 class="page-intro__main">Welcome to your TrueNTH Dashboard{% if user.first_name %}, {{user.first_name}}{% endif %}</h3>
-        <br/>
-        <p class="page-intro__sub">Below are the TrueNTH tools available to you.</p>
-        <p class="page-intro__sub">More will become available as TrueNTH evolves.</p>
-        <div class="button-callout">
-            <figure class="js-scroll-down" data-target=".page-intro"></figure>
-        </div>
-    </section>
+{#
+{% if not user.has_role('write_only') %}
+<div class="portal-item">
+    <h2 class="tnth-subhead">{{ _("Explore TrueNTH") }}</h2>
+    <p>{{ _("Discover online tools to guide you through the cancer journey.") }}</p>
+    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">{{ _("Learn More") }}</a>
+</div>
+{% endif %}
+#}
 
-    {# present each intervention in turn if configured for user #}
-     <section class="icon-box-group__wrapper home--items-wrapper">
-        <div id="homeItemsParentContainer" class="icon-box-group">
-        {% for intervention in interventions %}
-            {% set display = intervention.display_for_user(user) %}
-            {% if display.access %}
-                <div class="home--item-container">
-                    {% if intervention.description and intervention.description != "" %}<h4 class="icon-box__lowhead">{{ intervention.description }}</h4>{% endif %}
-                    <div class="home--item-text">{{ display.card_html | safe }}</div>
-                    <br/>
-                    <div>
-                    {% if display.link_url is none %}
-                        <a class="icon-box__button icon-box__button--main" href="javascript: loader(false);"><span class="home--disabled-button">{{_("Start")}}<figure></figure></span></a>
-                    {% else %}
-                        <a class="icon-box__button icon-box__button--main" href="{{ display.link_url }}"><span>{{ display.link_label }}<figure></figure></span></a>
-                    {% endif %}
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-        </div>
-        {% if user.has_role('write_only') %}
-            <div class="icon-box-group home--registraion-wrapper">
-                <div class="home--registration-container">
-                    <h4 class="icon-box__lowhead">{{ _("Complete Registration") }}</h4>
-                    <p class="text-left">{{ _("Completing your registration will allow you to return here in the future to see the information you've previously entered.") }}</p>
-                    <a class="icon-box__button icon-box__button--main" href="{{PORTAL}}{{ url_for('user.register', email=user.email if user.email)}}"><span>{{ _("Registration") }}<figure></figure></span></a>
-                </div>
+{% if config.get("SHOW_WELCOME") and user.has_role('write_only') %}
+<div class="portal-item">
+    <h2 class="tnth-subhead">{{ _("Welcome to TrueNTH") }}</h2>
+    {{ _("Tools for navigating the prostate cancer journey") }}
+</div>
+{% endif %}
+
+{# present each intervention in turn if configured for user #}
+{% for intervention in interventions %}
+    {% set display = intervention.display_for_user(user) %}
+    {% if display.access %}
+        <div class="portal-item">
+            <h2 class="tnth-subhead">{{ intervention.description }}</h2>
+            <div style="padding:0.2em 0">
+                {{ display.card_html | safe }}
             </div>
-        {% endif %}
-    </section>
-    <br class="clearfix"/>
-    <br/>
-    <footer class="footer home--footer-container">
-        <div class="footer__logo-area">
-          <figure class="footer__logo--truenth"></figure>
+            <div>
+                {% if display.link_url is none %}
+                <div>
+                    <br/>
+                    <a class="btn-lg btn-tnth-primary disabled" href="#">
+                        {{ display.link_label }}
+                    </a>
+                </div>
+                {% else %}
+                <div>
+                    <br/>
+                    <a class="btn-lg btn-tnth-primary" href="{{ display.link_url }}">
+                        {{ display.link_label }}
+                    </a>
+                </div>
+                {% endif %}
+            </div>
         </div>
-        <ul class="nav-list">
-          <li class="nav-list__item"><a href="{{PORTAL}}/about">About</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/decision-support">Decision Support</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/symptom-tracker">Symptom Tracker</a></li>
-        </ul>
-        <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
-        </ul>
-        <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Legal</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
-        </ul>
-        <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
-            <figure class="footer__logo--movember"></figure></a></div>
-      </footer>
-</main>
-{% endblock %}
-{% block footer %}
-<!--placeholder-->
-{% endblock %}
-{% block document_ready %}
-    <script>
-        $(document).ready(function() {
-            $("body").attr("class", "page-home");
-            $("aside").hide();
-            $(".side-nav-items__item--home").hide();
-            if ($(".home--item-container").length == 1) {
-                $(".home--item-container").removeClass("home--item-container").addClass("home--item-container-full");
-            };
-        });
-    </script>
-{% endblock %}
+    {% endif %}
+{% endfor %}
 
+{% if user.has_role('write_only') %}
+    <div class="portal-item">
+        <h2 class="tnth-subhead">{{ _("Complete Registration") }}</h2>
+        <p>{{ _("Completing your registration will allow you to return here in the future to see the information you've previously entered.") }}</p>
+        <a href="{{PORTAL}}{{ url_for('user.register', email=user.email if user.email)}}" class="btn-lg btn-tnth-primary">{{ _("Registration") }}</a>
+    </div>
+{% endif %}
+
+<div class="img-with-text flush-with-footer full-width">
+    <img src="{{ url_for('static', filename='img/man-with-canoe.jpg') }}" class="img-responsive" />
+    <!--
+    <div class="text-on-img text-bot">
+        <h2 class="tnth-subhead">LOREM IPSUM</h2>
+        <p>"Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+    </div>
+    -->
+</div>
+
+{% endblock %}
