add custom patient details to patient profile, EPROMS only

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -968,6 +968,9 @@ table.profile-audit-log TH,
 .side {
   height: 26em;
 }
+.side-md {
+  height: 22em;
+}
 .flex {
   display: flex;
   flex-wrap: wrap;
@@ -1184,7 +1187,22 @@ div.org-container input[type="checkbox"] {
 .indent {
   padding: 0 1.4em;
 }
-
+.custom-container {
+  display: flex;
+  margin-bottom: 2em;
+  border-bottom: 1px solid #E0E6E3;
+  padding: 0.1em 0 1.5em 0;
+}
+.custom-container-item, .custom-container-item-right {
+  width: 33%;
+  max-width: 100%;
+}
+.custom-container-item-right {
+  margin-right: 0.12em;
+}
+.custom-container-content {
+  font-size: 0.95em;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -1394,11 +1412,26 @@ div.org-container input[type="checkbox"] {
   .side {
     height: 35em;
   }
+  .side-xs {
+    height: 22em;
+  }
   .load-container {
     min-height: 1.5em;
   }
   #adminTable .consentdate-field {
     display: none;
+  }
+  .custom-container {
+    display: block;
+  }
+  .custom-container-item, .custom-container-item-right {
+    font-size: 0.9em;
+    width: 100%;
+    max-width: 100%;
+  }
+  .custom-container #profileEmailSelect {
+    width: 90%;
+    max-width: 100%;
   }
 }
 @media (min-width: 992px) {
