--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1032,7 +1032,10 @@ t
 }
 
 .side {
-  height:26em
+  height:29em
+}
+.side-md {
+  height: 25em
 }
 .flex {
   display: flex;
@@ -1367,7 +1370,7 @@ div.org-container input[type="checkbox"] {
   }
 
   .side {
-    height: 38em;
+    height: 40em;
   }
   #phone, #email {
     width: 100%;
@@ -1514,7 +1517,10 @@ div.org-container input[type="checkbox"] {
     height: 10em;
   }
   .side {
-    height: 35em;
+    height: 37em;
+  }
+  .side-xs {
+    height: 22em;
   }
   .load-container {
     min-height: 1.5em;
