--- a/portal/templates/gil/about.html
+++ b/portal/templates/gil/about.html
@@ -23,12 +23,12 @@
           <p class="module__body">We have two tools currently running and more on the way.</p>
           <div class="icon-box-group__wrapper">
             <div class="icon-box-group">
-              <div class="icon-box-wrap"><a class="icon-box icon-box--theme-compass" href="{{PORTAL}}/decision-support"><strong class="icon-box__subhead">Tool N<em>o</em>1: Post Diagnosis</strong>
+              <div class="icon-box-wrap icon-box-decision-support"><a class="icon-box icon-box--theme-compass decision-support-link" href="{{PORTAL}}/decision-support"><strong class="icon-box__subhead">Tool N<em>o</em>1: Post Diagnosis</strong>
                   <h4 class="icon-box__head">Decision Support</h4><span class="icon-box__lowhead">Questionnaire / Education / Report</span>
                   <svg class="icon-box__icon" width="92" height="92">
                     <use xlink:href="#DS-Compass"></use>
                   </svg></a></div>
-              <div class="icon-box-wrap"><a class="icon-box icon-box--theme-compass icon-box--theme-brown" href="{{PORTAL}}/symptom-tracker"><strong class="icon-box__subhead">Tool N<em>o</em>2: Monitoring</strong>
+              <div class="icon-box-wrap icon-box-symptom-tracker"><a class="icon-box icon-box--theme-compass icon-box--theme-brown symptom-tracker-link" href="{{PORTAL}}/symptom-tracker"><strong class="icon-box__subhead">Tool N<em>o</em>2: Monitoring</strong>
                   <h4 class="icon-box__head">Symptom Tracker</h4><span class="icon-box__lowhead">Questionnaire / Reports / Tips</span>
                   <svg class="icon-box__icon" width="90" height="90">
                     <use xlink:href="#ST-Graph"></use>
