--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -34,8 +34,8 @@
   color: #ECF7E5;
   background-color: transparent;
   border-color: transparent;
-  transition: all 0.2s ease-in-out 0s;
-  -webkit-transition: all 0.2s ease-in-out 0s;
+  /*transition: all 0.2s ease-in-out 0s;
+  -webkit-transition: all 0.2s ease-in-out 0s;*/
   text-shadow: none;
   background-image: none;
   &:hover, &:active, .tnth-open & {
